Disabled warning in php, fix overflow home page

--- a/resources/scss/pages/home/_partition.scss
+++ b/resources/scss/pages/home/_partition.scss
@@ -4,6 +4,8 @@
   gap: 1em;
   justify-content: space-between;
   margin-bottom: 2em;
+  overflow: hidden;
+
 
 
   &__text {
