--- a/resources/scss/pages/home/hero.scss
+++ b/resources/scss/pages/home/hero.scss
@@ -5,7 +5,6 @@
 
   &__partition {
     display: flex;
-    overflow: hidden;
     margin-bottom: 4em;
   }
 
